--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cjh-backend-portfolio",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch ./src/index.ts",
     "start": "node ./dist/index.js",
